--- a/stijl.css
+++ b/stijl.css
@@ -1,3 +1,17 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+h1 {
+  background-color: darkorange;
+  font-size: 40px;
+}
+
 h2 {
   color: red;
+}
+
+p {
+  line-height: 1.5;
 }
